Tighten header + problems intro to reflect collapsible pills and R-output sections

--- a/SG3_study_dashboard.html
+++ b/SG3_study_dashboard.html
@@ -50,7 +50,7 @@
 <body>
 <header>
   <h1>Exam 3 Study Dashboard</h1>
-  <p>Expanded, step‑by‑step explanations with formulas, figures, and tables.</p>
+  <p>Objectives + key equations + worked Problems 1–6 (Type I/III, two‑way ANOVA, RM ANOVA, split‑plot, and contrasts), with short answers up front and optional deep walkthroughs you can expand as needed.</p>
 </header>
 <div class="container">
 <div class="nav">
@@ -314,7 +314,7 @@ Use the same α<sub>j</sub>, β<sub>k</sub>, and (αβ)<sub>jk</sub> formulas ab
 </section>
 <section id="problems">
 <h2>Problems</h2>
-<p><em>Goal:</em> Each problem below includes the full prompt + what it’s testing + a worked solution. Use the “Skills tested” links to jump back to objectives.</p>
+<p><em>Goal:</em> Each problem below includes the full prompt + what it’s testing + (i) a short visible answer and (ii) expandable “pill” sections for deeper walkthroughs. When SG3 provides R output for a problem, you’ll also see a <strong>“Show R output (given)”</strong> pill with the verbatim output. Use the “Skills tested” links to jump back to objectives.</p>
 
 <details id="p1" open>
 <summary>Problem 1 (Type I vs Type III; “Pure” Effects)</summary>
